added template for secondary stats

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <script type="text/javascript" src="script.js"></script>
     </head>
     <body>
-        <div class="grid-container">
+        <div class="grid-container-1">
             <div class="grid-item">
                 Base
             </div>
@@ -170,6 +170,81 @@
             </div>
             <div class="grid-item">
                 <input id="reborn" onchange="rebornCheck(); calcStatPoints();" type="checkbox">
+            </div>
+        </div>
+        <p></p>
+        <div class="grid-container-2">
+            <div class="grid-item">
+                HP
+            </div>
+            <div class="grid-item">
+                Total HP
+            </div>
+            <div class="grid-item">
+                SP
+            </div>
+            <div class="grid-item">
+                Total SP
+            </div>
+            <div class="grid-item">
+                Atk
+            </div>
+            <div class="grid-item">
+                Base Atk + Equip Atk
+            </div>
+            <div class="grid-item">
+                Def
+            </div>
+            <div class="grid-item">
+                Soft Def + Hard Def
+            </div>
+            <div class="grid-item">
+                Matk
+            </div>
+            <div class="grid-item">
+                Base Matk + Equip Matk
+            </div>
+            <div class="grid-item">
+                Mdef
+            </div>
+            <div class="grid-item">
+                Soft Mdef + Hard Mdef
+            </div>
+            <div class="grid-item">
+                Hit
+            </div>
+            <div class="grid-item">
+                Hit Value
+            </div>
+            <div class="grid-item">
+                Flee
+            </div>
+            <div class="grid-item">
+                Flee Value + P. Flee
+            </div>
+            <div class="grid-item">
+                Crit
+            </div>
+            <div class="grid-item">
+                Crit Value
+            </div>
+            <div class="grid-item">
+                Aspd
+            </div>
+            <div class="grid-item">
+                Aspd Value
+            </div>
+            <div class="grid-item">
+                Cast
+            </div>
+            <div class="grid-item">
+                Fixed + Variable
+            </div>
+            <div class="grid-item">
+                Weight
+            </div>
+            <div class="grid-item">
+                Weight Value
             </div>
         </div>
         <script>
