--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <script type="text/javascript" src="script.js"></script>
     </head>
     <body>
+        <div class="art"></div>
         <div class="content">
             <div class="header">
                 <div class="header-item logo"><img alt="NovaRO logo" width="150px" src="logo.png"></div>
